Changed z-index of component toolbar so the footer no longer cuts it off

--- a/packages/app/obojobo-document-engine/src/scripts/oboeditor/components/node/editor-component.scss
+++ b/packages/app/obojobo-document-engine/src/scripts/oboeditor/components/node/editor-component.scss
@@ -3,11 +3,15 @@
 .oboeditor-component {
 	position: relative;
 
+	.component:last-child {
+		padding-bottom: 2em;
+	}
+
 	.component-toolbar {
 		position: absolute;
 		height: 100%;
 		top: 0;
-		z-index: $z-index-above-content;
+		z-index: $z-index-above-most;
 
 		.top {
 			top: 0;
